# basilisk

./: .gitattributes  .gitignore  AUDIT_NOTES.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  audit_subdomains.py  composer.json  docker-compose.altoro.yml  docker-compose.badstore.yml  docker-compose.bwapp.yml  docker-compose.crapi.yml  docker-compose.dsvw.yml  docker-compose.dvga.yml  docker-compose.dvwa.yml  docker-compose.dvws.yml  docker-compose.gruyere.yml  docker-compose.hackazon.yml  docker-compose.juiceshop.yml  docker-compose.mutillidae.yml  docker-compose.nodegoat.yml  docker-compose.pixi.yml  docker-compose.railsgoat.yml  docker-compose.training.yml  docker-compose.vampi.yml  docker-compose.vapi.yml  docker-compose.vulnstack.yml  docker-compose.wackopicko.yml  docker-compose.webgoat.yml  docker-compose.xvwa.yml  helpers.php  phpunit.xml.dist  pyproject.toml  run_audit.py  run_batch_training.py
basilisk/: __init__.py  __main__.py  cli.py  config.py
basilisk/actor/: __init__.py  base.py  composite.py  http_actor.py  recording.py
basilisk/bridge/: __init__.py  context_adapter.py  legacy_scenario.py  result_adapter.py
basilisk/campaign/: __init__.py  extractor.py  memory.py  models.py  store.py
basilisk/capabilities/: capability.py  mapping.py
basilisk/core/: attack_graph.py  auth.py  callback.py  executor.py  exploit_chain.py  facade.py  pipeline.py  plugin.py  project_manager.py  providers.py  registry.py
basilisk/decisions/: __init__.py  decision.py
basilisk/display/: __init__.py  live.py  panels.py  report.py  state.py  training.py
basilisk/domain/: __init__.py  finding.py  scenario.py  surface.py  target.py
basilisk/engine/: __init__.py  scenario_registry.py  target_loader.py
basilisk/events/: bus.py
basilisk/knowledge/: entities.py  graph.py  relations.py  state.py  store.py
basilisk/logging/: __init__.py  cleanup.py  run_logger.py  writer.py
basilisk/memory/: __init__.py  history.py
basilisk/models/: __init__.py  project.py  result.py  target.py  types.py
basilisk/observations/: adapter.py  observation.py
basilisk/orchestrator/: attack_paths.py  cost_tracker.py  coverage_tracker.py  executor.py  goals.py  loop.py  planner.py  safety.py  scenario_executor.py  selector.py  timeline.py
basilisk/reasoning/: belief.py  hypothesis.py
basilisk/reporting/: __init__.py  aggregation.py  analysis.py  autonomous.py  collector.py  csv.py  data.py  engine.py  extraction.py  filtering.py  html.py  json.py  live_html.py  renderer.py  rendering.py  utils.py  writer.py
basilisk/scenarios/: __init__.py
basilisk/scoring/: scorer.py
basilisk/storage/: cache.py  db.py  repo.py
basilisk/training/: __init__.py  docker.py  planner_wrapper.py  profile.py  runner.py  scorer_wrapper.py  validator.py
config/: bwapp.yaml  config.php  default.yaml  dvwa.yaml  juiceshop.yaml  mutillidae.yaml  vulnstack.yaml  webgoat.yaml
examples/: full_audit.py
scripts/: dvwa_setup.py  dvwa_verify.py  export_payloads.py
src/: BasiliskServiceProvider.php  OutputOnCommand.php
src/Git/: Dumper.php  (+4 more)
tests/: BasicTest.php  conftest.py  test_cli.py  test_config.py  test_init.py
training_profiles/: altoro_mutual.yaml  badstore.yaml  bwapp.yaml  crapi.yaml  dsvw.yaml  dvbank.yaml  dvga.yaml  dvwa.yaml  dvws.yaml  gruyere.yaml  hackazon.yaml  juice_shop.yaml  mutillidae.yaml  nodegoat-seed.js  nodegoat.yaml  pixi.yaml  railsgoat.yaml  vampi.yaml  vapi.yaml  wackopicko.yaml  webgoat.yaml  xvwa.yaml
(+414 files in other folders)
