[project]
name = "basilisk"
version = "2.0.0"
description = "Professional modular security audit framework for domain reconnaissance, analysis, and pentesting"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "textual>=1.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "aiolimiter>=1.1",
    "aiofiles>=24.0",
    "aiosqlite>=0.20",
    "dnspython>=2.5",
    "cryptography>=42.0",
    "beautifulsoup4>=4.12",
    "jinja2>=3.1",
]

[project.optional-dependencies]
full = [
    "python-whois>=0.9",
    "ipwhois>=1.2",
    "python-nmap>=0.7",
    "shodan>=1.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "aioresponses>=0.7",
]

[project.scripts]
basilisk = "basilisk.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
